# factorio-dependency-tree

./: README.md  belts.csv  parse.py  parse_recipe.py  parse_technology.py  pyproject.toml  requirements.txt  science_pack.py
data/: recipes.csv  science_packs.csv  science_packs.txt  technology.csv
raw/: science_recipes.csv  technology2.lua
raw/recipe/: ammo.lua  capsule.lua  equipment.lua  fluid-recipe.lua  furnace-recipe.lua  inserter.lua  module.lua  recipe.lua  turret.lua
raw/technology/: inserter.lua  military-upgrades.lua
